Laziness is lazy on both ports, and the reader reads maps
Running the flint compiler found four more bugs, none of which any conformance
case had reached, and two of them made the ports wrong rather than slow.

`flint/array-map` takes ONE argument -- a flat sequence of key, value, key,
value -- and I had read it as varargs. So every map literal came back EMPTY:
flint's reader parsed 97 KB of spec into `{}`, and the compiler then failed to
resolve the first symbol it saw. The error even carried `:ns flint.main`, a
namespace not in the program being compiled, which sent me looking in the wrong
place until I probed the reader directly on `{:a 1}` and watched it answer
`{}`.

A variadic rest argument was a vector, not a seq, so `(list 1 2)` printed as
`[1 2]`. The right elements in the wrong shape, again.

Laziness was not lazy. `cons` copied its tail into a flat list, so
`(cons x (lazy-seq ...))` forced the whole sequence -- a stack overflow on a
chain, one frame per element, and an OutOfMemoryError on an infinite one. Both
ports have a real cons cell now, and `first`, `rest` and `seq` step at most one
cell. `iterate` walks a chain with a loop rather than recursion.

`conj` and `conj!` onto a map take a `[k v]` pair, and `List.of` rejects nulls
in a third place -- a map entry with a nil value.

`runtimes/conform/lazy.cljc` is the case that pins it: it takes prefixes of
`iterate` and `repeat`, which cannot terminate against a materialising
implementation. Both hosts now match the native runtime on it exactly, so the
floor is 7.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01EaG12PbQuYUac6iDtuxHuE